[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/main/ui/level-select/LevelSelectButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/level-select/HookableLevelGradeLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/ui/menu/paged-level-buttons.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/menu/paged-level-panel.gd" type="Script" id=7]
[ext_resource path="res://src/main/ui/level-select/level-submenu-info-panel.gd" type="Script" id=8]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=9]
[ext_resource path="res://src/main/ui/level-select/level-grade-labels.gd" type="Script" id=10]
[ext_resource path="res://src/main/ui/level-select/level-submenu-description-panel.gd" type="Script" id=11]
[ext_resource path="res://src/main/ui/theme/h2.theme" type="Theme" id=13]
[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=14]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( -10, 0 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 904.0
margin_bottom = 45.0
theme = ExtResource( 13 )
text = "Level Select"
align = 1

[node name="Top" type="Control" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 904.0
margin_bottom = 376.0
size_flags_vertical = 3

[node name="LevelButtons" type="HBoxContainer" parent="VBoxContainer/Top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -145.0
margin_right = 452.0
margin_bottom = 145.0
alignment = 1
script = ExtResource( 5 )
LevelButtonScene = ExtResource( 1 )

[node name="LeftArrow" type="Button" parent="VBoxContainer/Top/LevelButtons"]
margin_left = 354.0
margin_top = 132.0
margin_right = 378.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 14 )
text = "<"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Top/LevelButtons"]
margin_left = 382.0
margin_top = 115.0
margin_right = 522.0
margin_bottom = 175.0
size_flags_vertical = 4
columns = 6

[node name="Button" parent="VBoxContainer/Top/LevelButtons/GridContainer" instance=ExtResource( 1 )]
margin_right = 140.0
margin_bottom = 60.0
rect_min_size = Vector2( 140, 60 )

[node name="RightArrow" type="Button" parent="VBoxContainer/Top/LevelButtons"]
margin_left = 526.0
margin_top = 132.0
margin_right = 550.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 14 )
text = ">"

[node name="GradeLabels" type="Control" parent="VBoxContainer/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 10 )
GradeLabelScene = ExtResource( 2 )

[node name="Bottom" type="Control" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 904.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Description" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )
script = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Description/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 14 )
align = 1
valign = 1
autowrap = true

[node name="Info" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Info/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 14 )
valign = 1

[node name="CheatCodeDetector" parent="." instance=ExtResource( 3 )]
codes = [ "unlock" ]

[connection signal="button_added" from="VBoxContainer/Top/LevelButtons" to="VBoxContainer/Top/GradeLabels" method="_on_LevelButtons_button_added"]
[connection signal="level_chosen" from="VBoxContainer/Top/LevelButtons" to="." method="_on_LevelButtons_level_chosen"]
[connection signal="locked_level_focused" from="VBoxContainer/Top/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_locked_level_focused"]
[connection signal="locked_level_focused" from="VBoxContainer/Top/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_locked_level_focused"]
[connection signal="unlocked_level_focused" from="VBoxContainer/Top/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_unlocked_level_focused"]
[connection signal="unlocked_level_focused" from="VBoxContainer/Top/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_unlocked_level_focused"]
[connection signal="pressed" from="VBoxContainer/Top/LevelButtons/LeftArrow" to="VBoxContainer/Top/LevelButtons" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="VBoxContainer/Top/LevelButtons/RightArrow" to="VBoxContainer/Top/LevelButtons" method="_on_RightArrow_pressed"]
[connection signal="cheat_detected" from="CheatCodeDetector" to="VBoxContainer/Top/LevelButtons" method="_on_CheatCodeDetector_cheat_detected"]
